<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/tan"

    >


    <androidx.cardview.widget.CardView
        android:id="@+id/cardImgLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="parent"


        >

        <ImageView
            android:id="@+id/imgLogin"
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:background="@color/design_default_color_secondary"
            >

        </ImageView>

    </androidx.cardview.widget.CardView>




    <androidx.cardview.widget.CardView
        android:id="@+id/cardLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardImgLogin"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/tan"


        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_default"
                android:gravity="center"
                android:text="@string/welcome"
                android:textSize="@dimen/title_text"
                android:textStyle="bold"
                android:textColor="@color/black"
                >

            </TextView>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/login_width"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                android:layout_gravity="center"
                android:hint="@string/hint_username"
                app:helperText="@string/helper_username"
                app:counterMaxLength="@integer/max_length_username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="@integer/max_length_username"
                    android:inputType="textPersonName"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/login_width"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                android:layout_gravity="center"
                android:hint="@string/hint_password"
                app:helperText="@string/helperpassword"
                app:counterMaxLength="@integer/max_length_username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="@integer/max_length_username"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cbRemember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_default"
                android:text="@string/remember_me"
                android:layout_gravity="center"

                />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btn_login_text"
                >

            </Button>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btn_login_register"
                >

            </Button>



        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>